Fix : alignement des textes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,12 +58,12 @@ h1 {
 /* ==================== */
 
 .div {
-    padding: clamp(15px, 2vw, 30px);
+    padding: clamp(15px, 40px, 30px) 20px;
     background: rgba(255, 255, 255, 0.6);
     border: 2px solid #000000;
     border-radius: 1.5rem;
     box-sizing: border-box;
-    text-align: center;
+    text-align: left;
 }
 
 #left {
@@ -141,6 +141,7 @@ a#create {
     font-size: clamp(16px, 1vw, 20px);
     color: #000000;
     text-decoration: none;
+    text-align: center;
     border: 2px solid black;
     border-radius: 50px;
     transition: all 0.2s ease;
@@ -193,7 +194,7 @@ a#create:hover {
         transform: scale(1.20);
     }
     50% {
-        transform: scale(1.45);
+        transform: scale(1.37);
     }
     75% {
         transform: scale(0.9);
